--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "backend",
   "version": "1.0.0",
+  "type": "commonjs",  // Remove if using ESM
   "description": "",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon server.js",
+    "build": "echo \"No build required\" && exit 0",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -13,5 +16,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.21.2"
+  },
+  "devDependencies": {
+    "jest": "^29.5.0",
+    "nodemon": "^3.0.1"
   }
 }
