--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
      "start": "node server.js", 
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Tests skipped for Azure deployment\" && exit 0"
+
+    
   },
   "keywords": [],
   "author": "",
